Ticket #14955 (closed defect: fixed)

Opened 5 months ago

Last modified 5 months ago

wxGridCellEditor documentation formatting error

Reported by: hackish Owned by:
Priority: low Milestone:
Component: documentation Version: 2.9-svn
Keywords: wxGridCellEditor Cc:
Blocked By: Patch: no
Blocking:

Description

 http://docs.wxwidgets.org/trunk/classwx_grid_cell_editor.html

Under the : virtual bool wxGridCellEditor::EndEdit
You can see the formatting gets weird with the "Save the new value internally so that ApplyEdit() could apply it.
Fill newval (which is never NULL) with the string" items getting really large.

I'm not sure what's going on but I'm sure one of the docs people can easily solve this.

Change History

Changed 5 months ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [73396]) Fix the list markers in wxGridCellEditor::EndEdit() documentation.

Doxygen allows to use "-", "+" or "*" for the list items but not "#".

Closes #14955.

Note: See TracTickets for help on using tickets.