Fix the list markers in wxGridCellEditor::EndEdit() documentation.

Doxygen allows to use "-", "+" or "*" for the list items but not "#".

Closes #14955.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73396 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775